# gtm-engine

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  static-analysis.yml
.semgrep/: gtm-invariants.yml
agent/: README.md  __init__.py  __main__.py  budget.py  config.py  gate_notify.py  graph.py  ledger_cli.py  ledgers.py  locks.py  mcp_config.py  onboard.py  onboard_cli.py  packs.py  permissions.py  pipeline.py  pipeline_executor.py  profiles.py  publish.py  radar.py  readiness.py  reply.py  session.py  voice.py  wizard.py
agent/mcp/: __init__.py  inbound.py
backend/: __init__.py  auth.py  database.py  deps.py  main.py  observability.py  push.py  ratelimit.py  schemas.py  session.py
backend/routers/: account.py  api_keys.py  auth.py  entitlement.py  ledger.py  onboard.py  profiles.py  push_tokens.py  runs.py  workspaces.py
backend/schema/: V001__data_spine.sql  V002__api_keys.sql  V003__credential_vault.sql  V004__rls_policies.sql  V005__runs.sql  V006__mcp_calls.sql  V007__revenuecat.sql  V008__push_tokens.sql  V009__rls_force_and_role.sql  V010__revenuecat_events.sql  V011__entitlement_sync.sql  V012__mcp_api_key_resolver.sql  V013__cost_reservations.sql  V014__users_password_changed_at.sql
cockpit/: README.md  __init__.py  base.py  bot.py  commands.py  delivery.py  gates.py  ingress.py  limits.py  onboarding.py  voice_mode.py
docs/: ARCHITECTURE.md  DEPLOY.md  RULES.md  SKILLS.md  audience-psychology-method.md  email-optimization.md  facebook-optimization.md  gtm-data-infra.md  hook-craft.md  instagram-optimization.md  knowledge-usage.md  linkedin-optimization.md  onboarding-surfaces.md  product-accuracy.md  prose-craft.md  purpose-scorecard.md  sales-questions-by-deal-phase.md  virality-engineering.md  x-optimization.md
gtm_core/: __init__.py  calendly_poll.py  capabilities.py  capability_registry.py  check_env.py  db.py  deadman.py  gtm_distill.py  ingest.py  knowledge_index.py  knowledge_meta.py  knowledge_refresh.py  knowledge_staging.py  knowledge_status.py  knowledge_usage.py  ledger_cli.py  ledgers.py  locks.py  metering.py  models.py  models.toml  outcomes.py  outreach_log.py  paths.py  people.py  profile.py  prospects_consolidate.py  prospects_dashboard.py  prospects_import.py  prospects_state.py  publish_hash.py  radar.py  resolve_knowledge.py  signals.py  tenancy.py  tiers.py  uploads.py
gtm_core/community_signal/: __init__.py  model.py  render.py  score.py
gtm_core/journey/: gitscan.py
gtm_core/packs/: __init__.py  loader.py  reachability.py  tenant.py
gtm_core/skills/: __init__.py  account_dossier.py  account_plan.py  airq_scan.py  base.py  build_deck.py  builder_evidence.py  builder_radar.py  builder_studio.py  call_prep.py  campaign_plan.py  carousel_auto.py  carousel_pdf.py  carousel_visuals.py  codegen.py  community_signal_analysis.py  content_plan.py  content_publish.py  content_radar.py  content_research.py  content_studio.py  deck_research.py  draft_outreach.py  email_sequence.py  events_tracker.py  gateway_runbook.py  gtm_planning.py  inbound_triage.py  infographic_data.py  infographic_handwritten.py  knowledge_refresh.py  linkedin_engagers.py  linkedin_reply.py  market_scan.py  outcomes_sync.py  profile_onboard.py  prospect.py  reddit_reply.py  registry.py  setup.py  (+4 more)
gtm_core/voc/: __init__.py  collect.py
mcp_server/: __init__.py  __main__.py  auth.py  meter.py  server.py
packs/knowledge-refresh/: inputs.toml
packs/marketing/: inputs.toml
packs/outcomes-loop/: inputs.toml
packs/planning/: inputs.toml
plugin/: .mcp.json  DEBRANDING-NOTES.md  PROFILE.template.md  README.md
plugin/.claude-plugin/: plugin.json
plugin/lib/: gtm_core
profiles/_template/: PROFILE.md
schemas/: README.md  community-signal-model.schema.json  content-item.schema.json  episode-bundle.schema.json  journey-state.schema.json  metric-record.schema.json  news-item.schema.json  people.schema.json  profile-draft.schema.json  run-manifest.schema.json  story-cluster.schema.json  syften-filters.schema.json  transcript.schema.json
scripts/: bootstrap.sh
telegram/: README.md
tests/: README.md  conftest.py  test_calendly_poll.py  test_deadman.py  test_deck_mcp_server.py  test_knowledge_meta.py  test_knowledge_staging.py  test_knowledge_status.py  test_outcomes.py  test_prospects_consolidate.py  test_prospects_dashboard.py  test_prospects_import.py  test_prospects_state.py  test_signals.py
tests/agent/: conftest.py  test_deepseek_worker.py  test_gemini_image_worker.py  test_graph_runner.py  test_higgsfield_video_worker.py  test_ledger_cli.py  test_ledgers.py  test_locks.py  test_main_pipeline.py  test_mcp_env_scoping.py  test_model_deprecation_lint.py  test_models.py  test_models_fallback.py  test_onboard.py  test_onboard_cli.py  test_onboard_render_full.py  test_onboard_schema.py  test_onboard_settings.py  test_outreach_log.py  test_people.py  test_permissions.py  test_pipeline.py  test_pipeline_executor_p4.py  test_profile_cli.py  test_profiles.py  test_publish.py  test_radar_golden.py  test_reply.py  test_resolve_knowledge.py  test_rocketreach_worker.py  test_saleshandy_wrapper.py  test_session_p2.py  test_session_p4.py  test_stream_brain_messages.py  test_tts_worker.py  test_uploads.py  test_vision_worker.py  test_voice.py  test_wizard.py
tests/backend/: test_auth_refresh.py  test_auth_unit.py  test_cost_guard.py  test_cost_reservation_live.py  test_entitlement_sync.py  test_gate_edit.py  test_hardening_residuals.py  test_observability.py  test_p2_hardening.py  test_p3_namespacing.py  test_phase_f.py  test_phase_f2.py  test_phase_f3.py  test_phase_f4_sse.py  test_rls_live.py  test_session_streaming.py  test_tenant_isolation.py
tests/cockpit/: conftest.py  fakes.py  test_allowlist.py  (+8 more)
(+237 files in other folders)
